<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_main_JAVA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivityKotlin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/et_label_temp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:typeface="serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:typeface="serif"
            android:textStyle="bold"
            android:text="Java"/>

        <EditText
            android:id="@+id/valorTemp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_et"
            android:gravity="center"
            android:hint="100"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/temp_in_celsius"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/equals"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/converted"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:hint="100"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="serif" />


        <TextView
            android:id="@+id/formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/form"
            android:textAlignment="center"
            android:typeface="serif"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/celciusRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/celsius"
                android:textAllCaps="true"
                android:typeface="monospace"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/fahrenheitRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:checked="true"
                android:text="@string/fahrenheit"
                android:textAllCaps="true"
                android:typeface="serif" />

            <RadioButton
                android:id="@+id/KelvinRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/kelvin"
                android:textAllCaps="true"
                android:typeface="serif" />

        </RadioGroup>

        <Button
            android:id="@+id/converterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/round_btn"
            android:padding="20dp"
            android:onClick="convert"
            android:text="@string/convert_temperature"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/round_btn"
            android:padding="20dp"
            android:text="@string/clear"
            android:onClick="clearFields"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:typeface="serif" />

    </LinearLayout>

</ScrollView>